--- a/template/userbar.html
+++ b/template/userbar.html
@@ -10,6 +10,10 @@
         font-family: Arial;
         font-size: 15px;
     }
+
+    #logout_form {
+        display: inline-block;
+    }
 </style>
 
 <!-- BEGIN LOGGED_IN -->
@@ -26,17 +30,16 @@
             <a class="dropdown-item" href="#">Trocar perfil</a>
             <a class="dropdown-item" href="#">Configurações</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{logout_url}">Sair</a>
+            <a class="dropdown-item" href="javascript: {}"
+                onclick="document.getElementById('logout_form').submit(); return false;">Sair</a>
         </div>
     </div>
     <div>
-        | <form action="{logout_url}" method="POST" class="form-inline" style="display:inline-block" id="logout_form">
+        | <form action="{logout_url}" method="{logout_method}" class="form-inline" id="logout_form">
             <!-- O uso do link ao invés do botao é para poder formatar corretamente -->
             <a href="javascript: {}" onclick="document.getElementById('logout_form').submit(); return false;"
-                class="font-weight-bold nounderline pr-2">
-                Sair <i class="fa fa-sign-out-alt"></i></a>
+                class="font-weight-bold nounderline pr-2"> Sair <i class="fa fa-sign-out-alt"></i></a>
         </form>
-
     </div>
 </div>
 <!-- END LOGGED_IN -->
